logs/bscrp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bscrp'...
Compiling './lib/python3.5/site-packages/bscrp/__init__.py'...
***   File "./lib/python3.5/site-packages/bscrp/__init__.py", line 245
    print "starting getPostsFromSoup with ", type(soup), str(soup)[:200]
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bscrp/error_page.py'...
***   File "./lib/python3.5/site-packages/bscrp/error_page.py", line 4
    print "starting isErrorPageFromSoup with", len(soup.text)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bscrp/headers.py'...
***   File "./lib/python3.5/site-packages/bscrp/headers.py", line 19
    print "header is", type(header)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bscrp/http.py'...
***   File "./lib/python3.5/site-packages/bscrp/http.py", line 72
    print "webpage of", url," in cache so get that instead of making a call"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bscrp-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
